# verco

./: .gitignore  .pepper  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  file1.txt  file2.txt  project.pp  todo.txt
.github/: FUNDING.yml
.github/workflows/: rust.yml
.verco/: custom_actions.txt  custom_commands.txt
next/: application.rs  backend.rs  controller.rs  main.rs  mode.rs  platform.rs  promise.rs  ui.rs  version_control.rs
next/backend/: git.rs
next/mode/: branches.rs  log.rs  revision_details.rs  status.rs  tags.rs
next/platform/: windows.rs
next/version_control/: git.rs
old/: action.rs  application.rs  async_process.rs  custom_actions.rs  git_actions.rs  hg_actions.rs  input.rs  repositories.rs  scroll_view.rs  select.rs  version_control_actions.rs
src/: action.rs  actions.rs  add_remove.rs  add_remove_ui.rs  application.rs  async_process.rs  backend.rs  cli.rs  console.rs  controller.rs  ctrlc_handler.rs  custom_actions.rs  custom_commands.rs  default_actions.json  git_actions.rs  gui.rs  hg_actions.rs  input.rs  keybindings.rs  main.rs  main2.rs  mode.rs  platform.rs  repositories.rs  revision_shortcut.rs  scroll_view.rs  select.rs  settings.rs  tui.rs  tui_util.rs  ui.rs  version_control.rs  version_control_actions.rs  worker.rs
src/backend/: git.rs  hg.rs  plastic.rs
src/mode/: branches.rs  log.rs  revision_details.rs  status.rs  tags.rs
src/support/: mod.rs
