[package]
name = "verco"
version = "6.0.0"
authors = ["Matheus Lessa"]
edition = "2018"
exclude = [
    "images/*",
]
description = "A simple Git/Hg version control client based on keyboard shortcuts"
license = "GPL-3.0"
resolver = "2"

documentation = "https://github.com/vamolessa/verco"
homepage = "https://vamolessa.github.com/verco"
repository = "https://github.com/vamolessa/verco"
readme = "README.md"
keywords = ["version-control", "tool", "git", "hg", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "verco"
path = "src/main.rs"

[dependencies]
crossterm = "0.20"
ctrlc = "3.1"

