[package]
name = "verco"
version = "6.1.0"
authors = ["Matheus Lessa"]
edition = "2018"
exclude = [
    "images/*",
]
description = "A simple Git/Mercurial/PlasticSCM tui client based on keyboard shortcuts"
license = "GPL-3.0"
resolver = "2"

documentation = "https://github.com/vamolessa/verco"
homepage = "https://vamolessa.github.com/verco"
repository = "https://github.com/vamolessa/verco"
readme = "README.md"
keywords = ["version-control", "git", "hg", "mercurial", "plastic"]
categories = ["command-line-utilities"]

[[bin]]
name = "verco"
path = "src/main.rs"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winuser", "consoleapi", "processenv", "handleapi"] }
